build: improved the deployment reducing steps

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ POSTGRES_USER="testuser"
 POSTGRES_PASSWORD="testpass"
 POSTGRES_DB="dbname"
 POSTGRES_PORT=9293
-POSTGRES_HOSTNAME="localhost"
+POSTGRES_HOSTNAME="127.0.0.1"
 
 
-OLLAMA_BASE_URL="http://localhost:11434/api"
+OLLAMA_BASE_URL="http://127.0.0.1:11434/api"
