feat: added server side support

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "date-fns": "^4.1.0",
     "drizzle-kit": "^0.31.5",
     "eslint": "^9.35.0",
+    "nuxt-auth-utils": "^0.5.25",
     "pg": "^8.16.3",
     "shiki-stream": "^0.1.2",
     "typescript": "^5.9.2",
