--- a/package.json
+++ b/package.json
@@ -16,32 +16,36 @@
     "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
-    "@iconify-json/lucide": "^1.2.68",
-    "@iconify-json/simple-icons": "^1.2.52",
-    "@nuxt/ui": "^4.0.0-alpha.2",
-    "drizzle-orm": "^0.44.6",
-    "nuxt": "^4.1.0",
-    "ollama-ai-provider-v2": "^1.5.0"
+    "@iconify-json/lucide": "^1.2.73",
+    "@iconify-json/simple-icons": "^1.2.58",
+    "@nuxt/ui": "^4.1.0",
+    "@types/bun": "^1.3.2",
+    "drizzle-orm": "^0.44.7",
+    "drizzle-seed": "^0.3.1",
+    "nuxt": "^4.1.3",
+    "ollama-ai-provider-v2": "^1.5.4"
   },
   "devDependencies": {
-    "@ai-sdk/gateway": "^1.0.24",
-    "@ai-sdk/google": "^2.0.14",
-    "@ai-sdk/vue": "^2.0.47",
+    "@ai-sdk/gateway": "^1.0.41",
+    "@ai-sdk/google": "^2.0.32",
+    "@ai-sdk/vue": "^2.0.93",
     "@langchain/textsplitters": "^0.1.0",
-    "@nuxt/eslint": "^1.9.0",
+    "@nuxt/eslint": "^1.10.0",
     "@nuxtjs/mdc": "^0.17.4",
-    "@types/node": "^24.5.2",
+    "@types/node": "^24.10.1",
     "@upstash/vector": "^1.2.2",
-    "ai": "^5.0.47",
+    "ai": "^5.0.93",
     "ai-sdk-ollama": "^0.13.0",
+    "argon2": "^0.44.0",
     "date-fns": "^4.1.0",
-    "drizzle-kit": "^0.31.5",
-    "eslint": "^9.35.0",
+    "drizzle-kit": "^0.31.7",
+    "drizzle-zod": "^0.8.3",
+    "eslint": "^9.39.1",
     "nuxt-auth-utils": "^0.5.25",
     "pg": "^8.16.3",
-    "shiki-stream": "^0.1.2",
-    "typescript": "^5.9.2",
-    "vue-tsc": "^3.0.7"
+    "shiki-stream": "^0.1.3",
+    "typescript": "^5.9.3",
+    "vue-tsc": "^3.1.4"
   },
   "resolutions": {
     "unimport": "4.1.1"
