--- a/package.json
+++ b/package.json
@@ -32,8 +32,15 @@
     "@langchain/textsplitters": "^0.1.0",
     "@nuxt/eslint": "^1.10.0",
     "@nuxtjs/mdc": "^0.17.4",
+    "@tiptap/extension-placeholder": "^3.10.7",
+    "@tiptap/extension-underline": "^3.10.7",
+    "@tiptap/markdown": "^3.10.7",
+    "@tiptap/starter-kit": "^3.10.7",
+    "@tiptap/vue-3": "^3.10.7",
+    "@toon-format/toon": "^1.0.0",
     "@types/node": "^24.10.1",
     "@upstash/vector": "^1.2.2",
+    "@vueuse/router": "^14.0.0",
     "ai": "^5.0.93",
     "ai-sdk-ollama": "^0.13.0",
     "argon2": "^0.44.0",
@@ -41,7 +48,10 @@
     "drizzle-kit": "^0.31.7",
     "drizzle-zod": "^0.8.3",
     "eslint": "^9.39.1",
+    "modern-monaco": "^0.2.2",
+    "monaco-editor": "^0.54.0",
     "nuxt-auth-utils": "^0.5.25",
+    "nuxt-monaco-editor": "^1.4.0",
     "pg": "^8.16.3",
     "shiki-stream": "^0.1.3",
     "typescript": "^5.9.3",
