feat: started adding bullmq for embedding models queue

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ POSTGRES_HOSTNAME="127.0.0.1"
 
 
 OLLAMA_BASE_URL="http://127.0.0.1:11434/api"
+
+REDIS_PASSWORD=sua_senha_secreta_redis
+REDIS_PORT=6379
