--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -12,7 +12,16 @@ services:
     env_file:
       - .env.prod
     volumes:
-      - postgres_data:/var/lib/postgresql/data 
+      - postgres_data:/var/lib/postgresql/data
+  redis:
+    image: redis:alpine
+    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}
+    ports:
+      - "${REDIS_PORT:-6379}:6379"
+    env_file:
+      - .env
+    volumes:
+      - redis_data:/data
 
 volumes:
   postgres_data:
