--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,17 @@ services:
       - .env
     volumes:
       - postgres_data:/var/lib/postgresql/data 
-
+  redis:
+    image: redis:alpine
+    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}
+    ports:
+      - "${REDIS_PORT:-6379}:6379"
+    env_file:
+      - .env
+    volumes:
+      - redis_data:/data
 volumes:
   postgres_data:
+    driver: local
+  redis_data:
     driver: local
