--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ai-sdk/gateway": "^1.0.41",
     "@ai-sdk/google": "^2.0.32",
     "@ai-sdk/vue": "^2.0.93",
+    "@huggingface/transformers": "^3.8.0",
     "@langchain/textsplitters": "^0.1.0",
     "@nuxt/eslint": "^1.10.0",
     "@nuxtjs/mdc": "^0.17.4",
